# Queryforge

./: .gitignore  README.md  dashboard.py  ingest_pdf.py  pyproject.toml  server.py
assets/: mcp_architecture.html
data/: seed.py
