[project]
name = "streamlit-dashboard-mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pypdf>=6.7.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
]
